# rule-scribe-games

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  GEMINI.md  MASTER_GUIDE.md  README-V2.md  README.md  SEO.md  SUPABASE_INTEGRATION_COMPLETE.md  Taskfile.yml  USER_STORY.md  VERIFICATION-RESULTS.md  analyze_vercel_data.py  article_body.html  avalon_output.json  avalon_output_retry.json  big_shot_rules.txt  birmingham_ai_infographics.json  birmingham_infographics_urls.json  birmingham_playwright_infographics.json  config.yaml  debug_output.txt  debug_req.py  index.html  mecenat_output.json  pyproject.toml  requirements.txt  splendor_output.json  tailwind.config.ts  vercel.json  vercel_data.json  verify_imports.py
backend/: config.yaml  init_db.sql  migrate_schema.sql  migrate_schema_v2.sql  migrate_schema_v3.sql  pyproject.toml  requirements.txt  verify_enhancement.py  verify_prompts.py
backend/api/: index.py
backend/app/: main.py  models.py  prompts.yaml  requirements.txt
backend/app/core/: gemini.py  llm_manager.py  local_db.py  logger.py  prompts.py  prompts_data.py  rate_limiter.py  settings.py  setup.py  supabase.py  task_manager.py
backend/app/db/migrations/: 001_add_confidence_and_versioning.sql  (+1 more)
backend/app/middleware/: validation.py
backend/app/models/: __init__.py
backend/app/prompts/: prompts.py
backend/app/routers/: README.md  debug.py  dictionary.py  games.py  search.py  summarize.py
backend/app/scripts/: add_manual_game.py  add_new_games.py  populate_manual_games.py  validate_urls.py
backend/app/services/: amazon_affiliate.py  amazon_batch.py  data_enhancer.py  db.py  game_service.py  gemini_client.py  generator.py  infographic_service.py  notebooklm_playwright_extractor.py  pdf_discovery.py  pipeline_orchestrator.py  research_agent.py  seo_renderer.py  sitemap.py
backend/app/utils/: README.md  affiliate.py  logger.py  slugify.py
backend/experiments/: README.md  benchmark_gemini.py  crew_agentic_demo.py  validate_links.py
backend/scripts/: apply_infographics_migration.py  apply_migration.py  batch_add_games.py  batch_generate_games.py  create_composite_header.py  debug_search_simulation.py  debug_splendor.py  diagnose_dev_connection.sh  enrich_games_full_schema.py  enrich_new_games.py  extract_brass_birmingham.py  fix_all_rules_no_tables.py  fix_slugs.py  game_data.py  generate_birmingham_infographics.py  generate_image_local.py  generate_professional_birmingham_infographics.py  generate_sample_infographics.py  infographics_urls.json  migrate_infographics.py  notebooklm_infographics_generator.py  notebooklm_playwright_automation.py  populate_strategy_tiers.py  recheck_missing_games_advanced.py  upload_and_test_infographics.py  upload_birmingham_infographics.py  upload_images.py  verify_no_tables.py  verify_visual_playwright.py
backend/scripts/legacy/: add_electropolis.py  add_istanbul_choose.py  add_istanbul_dice.py  add_maimajo.py  add_missing_games_final.py  add_new_games.py  add_tricky_sound.py  check_batch2_slugs.py  check_batch3_slugs.py  check_data_integrity.py  check_games_existence.py  check_istanbul_variants.py  check_missing_games_from_list.py  update_all_rules.py  update_detailed_rules.py  update_rules_batch1.py  update_rules_batch1_revised.py  update_rules_batch2.py  update_rules_batch3.py  update_strategy_tiers.py
backend/scripts/utils/: add_rules_summary_column.sql  create_strategy_table.sql  list_buckets.py
backend/tests/: README.md  test_llm_flow.py  test_supabase.py
backend/tests/logs/: 202512061747.json  202512061757.json  202512061801.json  202512061808.json  202512061815.json  202512061824.json  202512092141.json  202512181026.json  202512181027.json  202512181159.json
(+2300 files in other folders)
