[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "rule-scribe-games"
version = "0.1.0"
description = "Board Game Metadata Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest-asyncio>=1.3.0",
    "google-generativeai>=0.8.5",
    "pillow>=12.0.0",
    "pypdf2>=3.0.1",
    "pdf2image>=1.17.0",
    "beautifulsoup4>=4.14.3",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "PyYAML>=6.0.1",
]


[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "E501"]
