[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "rule-scribe-games"
version = "0.1.0"
description = "Board Game Metadata Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "supabase",
    "uvicorn",
    "python-dotenv",
    "anyio",
    "PyYAML",
    "google-generativeai",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest-asyncio",
    "pillow",
    "pypdf2",
    "pdf2image",
    "beautifulsoup4",
    "playwright",
    "pytest-playwright",
]


[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "E501"]
