[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
