[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "crewai[google-genai]>=1.6.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.ruff.lint]
per-file-ignores = {"app/main.py" = ["E402"], "../api/index.py" = ["E402", "F401"]}
